Build fix: Apache2 does not accept cgis with name `menu`

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 	<BODY>
-		<meta http-equiv="refresh" content="0; url=./cgi-bin/main.cgi" />
+		<meta http-equiv="refresh" content="0; url=./cgi-bin/menu.cgi" />
 		<!--#include file="analyticstracking.inc" -->
 		
 	</BODY>
